workaround for weird Chrome bug that incorrectly increased documentElement.scrollHeight; thanks Disemboweled Ego for the tip!

--- a/edsy.css
+++ b/edsy.css
@@ -1103,6 +1103,7 @@ TABLE.striped .togglebutton INPUT:active + DIV .iconsvg {
 #outfitting_modules_picker {
 	flex: 1 1 auto;
 	width: 10px;
+	position: relative;
 }
 
 #outfitting_modules .group > HEADER {
