updated EDOMH export to fully exclude legacy/custom/pre-engineered modules, added pre-engineered Guardian Gauss, and expanded the version numbering range

--- a/edsy.css
+++ b/edsy.css
@@ -10,7 +10,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 */
 
 :root {
-	--edsy-versions-css:36241,38341,38341,38341; /* HTML,CSS,DB,JS */
+	--edsy-versions-css:306029901,308039901,308039901,308039901; /* HTML,CSS,DB,JS */
 	--edsy-lastmodified-css:20211124;
 	
 	--colorblack: black;
