added workaround for a Chrome bug with getPropertyValue() and custom properties which mangled the version tags

--- a/edsy.css
+++ b/edsy.css
@@ -10,8 +10,8 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 */
 
 :root {
-	--edsy-versions-css:306029901,308039901,308039901,308039901; /* HTML,CSS,DB,JS */
-	--edsy-lastmodified-css:20211124;
+	--edsy-versions-css: v-308119901-308119901-308119901-308119901; /* HTML,CSS,DB,JS */
+	--edsy-lastmodified-css: d-20220913;
 	
 	--colorblack: black;
 	--colorwhite: white;
