--- a/edsy.css
+++ b/edsy.css
@@ -995,12 +995,44 @@ TABLE.striped .togglebutton INPUT:active + DIV .iconsvg {
 	font-size: 0.75rem;
 }
 
-#header_version ABBR {
-	border: none;
+#query_glow {
+	display: none;
+	position: absolute;
+	z-index: 99;
+	opacity: 0.75;
+	box-shadow: 0 0 1rem 1rem var(--coloryellow5);
 }
 
-#header_version IMG {
-	margin-left: 0.5em;
+#query_tool {
+	display: block;
+	position: static;
+	z-index: 99;
+	top: 0;
+	left: 0;
+	cursor: move;
+	border-radius: 0.5rem;
+	background-color: var(--coloryellow5);
+	color: var(--colorblack);
+	padding: 0.125rem;
+	text-decoration: none;
+}
+
+#query_info {
+	display: none;
+	position: absolute;
+	z-index: 99;
+	border: 2px solid var(--colorblack);
+	background-color: var(--colorgrey5);
+	color: var(--colorblack);
+	font-size: 125%;
+	padding: 0.5rem;
+	min-width: 15em;
+	max-width: 40em;
+}
+
+#version_label {
+	margin: 0 0.5em;
+	border: none;
 }
 
 
@@ -3435,7 +3467,7 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 100;
+	z-index: 10;
 	display: none;
     background-color: rgba(32, 32, 32, 0.75);
 	font: var(--fontcaps);
